@@ -14,6 +14,7 @@
       <placeholder name="View specific placeholder bottom">
         <menuitem    action="EditColumns"/>
         <menuitem    action="HighlightCriticalTasks"/>
+        <menuitem    action="ShowHintLines"/>
         <menuitem    action="NonstandardDays"/>
       </placeholder>
     </menu>
